methods.basics.MethodsDogHouse.scala.error
Erreur de compilation :
MethodsDogHouse:21: error: not found: value dogHouse
		dogHouse();
                ^MethodsDogHouse:27: error: not found: value dogHouse
		dogHouse();		
                ^MethodsDogHouse:37: error: not found: value dogHouse
		dogHouse();		
                ^MethodsDogHouse:47: error: not found: value dogHouse
		dogHouse();		
                ^